# ChamberOfSecretsBots

./: .Readme.md.swp  Readme.md
KnowledgeController/: main.py
TheMasterOfChambers/: .main.py.swp  creds.json  main.py  pyproject.toml  requirements.txt  statsUsuarios.txt  trash.txt
TimeController/: .main.py.swp  main.py
masterofchambers/: ListaUsuarios.txt  cos.html  creds.json  ids.txt  main.py  pyproject.toml  statsUsuarios - copia.txt  statsUsuarios.txt
